9章まとめまで

--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,7 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+
+    <!--FontAwesomeの読み込み-->
+    <script src="https://kit.fontawesome.com/b8e639c0f1.js" crossorigin="anonymous"></script>
+
+    <!--CSSファイルの読み込み-->
     <link rel="stylesheet" href="style.css"/>
+
     <title>CARAVAN</title>
   </head>
 
@@ -14,6 +20,12 @@
           CARAVAN
         </a>
       </h1>
+
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
 
     <!--navigation-->
