--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
-
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--FontAwesomeの読み込み-->
     <script src="https://kit.fontawesome.com/b8e639c0f1.js" crossorigin="anonymous"></script>
 
